--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,20 @@
-<h1>The Sunset Tracker</h1>
+<div class="row">
+  <div class="col m6 offset-m1 container">
+    <h1 class="home-title">The Sunset Tracker</h1>
+  </div>
+</div>
 
 <% if current_user %>
-  <p>
-    Welcome back, <%= current_user.name %>!
-  </p>
+  <div class="row">
+    <div class="col m4 offset-m1">
+      <h5 class="welcome">Welcome back, <%= current_user.name%></h5>
+      <%= link_to "Find a sunset", new_location_path, class: "btn amber darken-3" %>
+    </div>
+  </div>
 <% else %>
-  <%= link_to "Login with Twitter", "/auth/twitter" %>
+  <div class="row">
+    <div class="col m4 offset-m3">
+      <%= link_to "Login with Twitter", "/auth/twitter", class: "login btn blue" %>
+    </div>
+  </div>
 <% end %>
