--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="right">
         <li><%= link_to "Most Recent", "#" %></li>
-        <li><%= link_to "Logout", "#" %></li>
+        <li><%= link_to "Logout", logout_path, method: :delete %></li>
       </ul>
     </div>
   </nav>
