--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,8 +7,8 @@
   background-attachment: fixed;
 }
 
-.hero-image {
-  background: url("/assets/sunset-pier.jpeg") no-repeat center center fixed;
+.location-info {
+  background: url("/assets/location-info.jpeg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
