--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,8 +1,28 @@
+<h2>Where do you want to see the sunset?</h2>
+
 <p id="required-field" class="container">
   <%= "*Required field" %>
 </p>
-<h2>Where do you want to see the sunset?</h2>
 
 <div class="new-location">
-  
+  <div id="location-form" class="container">
+    <%= form_for @location do |f| %>
+      *<%= f.label :address, class: "form-text" %>
+      <%= f.text_field :address %>
+
+      *<%= f.label :city, class: "form-text" %>
+      <%= f.text_field :city %>
+
+      *<%= f.label :state, class: "form-text" %>
+      <%= f.text_field :state %>
+
+      *<%= f.label :zipcode, class: "form-text" %>
+      <%= f.text_field :zipcode %>
+
+      <%= f.label :date, class: "form-text" %>
+      <%= f.date_select :date %>
+
+      <%= f.submit "Submit", class:"submit-btn" %>
+    <% end %>
+  </div>
 </div>
