Display sunrise & sunset times for location in UTC
Create SunriseSunsetService
Make call with hard-coded date. Still need to accept date from location.
Location show displays times in UTC - need to convert it to local timezone

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -3,5 +3,9 @@
 <%= @location.date %><br/>
 <%= @location.city %>
 <p>
-  Time of sunset:
+  Time of sunrise: <%= @sunrise %>
+</p>
+
+<p>
+  Time of sunset: <%= @sunset %>
 </p>
