--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
   <body class = "landing-image">
 <% elsif current_page?(new_location_path) %>
   <body class = "location-info">
+<% elsif current_page?(location_path) %>
+  <body class = "location-show">
 <% end %>
 
 <% if current_user %>
