--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,28 +1,31 @@
-<h2>Where do you want to see the sunset?</h2>
+<div class="where-title col m6 offset-m1 container center">
+  <h2>Where do you want to see the sunset?</h2>
+</div>
 
-<p id="required-field" class="container">
-  <%= "*Required field" %>
-</p>
-
-<div class="new-location">
+<div class="new-location col m6 offset-m1">
   <div id="location-form" class="container">
     <%= form_for @location do |f| %>
-      *<%= f.label :address, class: "form-text" %>
-      <%= f.text_field :address %>
-
-      *<%= f.label :city, class: "form-text" %>
-      <%= f.text_field :city %>
-
-      *<%= f.label :state, class: "form-text" %>
-      <%= f.text_field :state %>
-
-      *<%= f.label :zipcode, class: "form-text" %>
-      <%= f.text_field :zipcode %>
-
-      *<%= f.label :date, class: "datepicker"  %>
-      <%= f.text_field :date, class: "datepicker" %>
-
-      <%= f.submit "Submit", class:"submit-btn" %>
+      <div>
+        <%= f.label :address, class: "form-text" %>
+        <%= f.text_field :address %>
+      </div>
+      <div>
+        <%= f.label :city, class: "form-text" %>
+        <%= f.text_field :city %>
+      </div>
+      <div>
+        <%= f.label :state, class: "form-text" %>
+        <%= f.text_field :state %>
+      </div>
+      <div>
+        <%= f.label :zipcode, class: "form-text" %>
+        <%= f.text_field :zipcode %>
+      </div>
+      <div>
+        <%= f.label :date, class: "datepicker"  %>
+        <%= f.text_field :date, class: "datepicker" %>
+      </div>
+      <%= f.submit "Submit", class:"submit-btn blue" %>
     <% end %>
   </div>
 </div>
