--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,11 +1,51 @@
-<h1>Data for your location</h1>
+<div class="show-title col m6 offset-m1 container center">
+  <h2>Sunrise and Sunset info for <%= @location.city %></h2>
+</div>
 
-<%= @location.date %><br/>
-<%= @location.city %>
-<p>
-  Time of sunrise: <%= @sunrise %>
-</p>
+<div class="row">
+  <div id="show-table" class="col m6 offset-m1">
+    <table>
+      <tbody>
+        <tr>
+          <td>Date:</td>
+          <td><%= @location.date.strftime("%B %d, %Y") %></td>
+        </tr>
+        <tr>
+          <td>Sunrise:</td>
+          <td><%= @sunrise %></td>
+        </tr>
+        <tr>
+          <td>Sunrise Weather Forecast:</td>
+          <td><%= @sunrise_weather %></td>
+        </tr>
+        <tr>
+          <td>Chance of Viewing the Sunrise</td>
+          <td>#Here goes % chance</td>
+        </tr>
+        <tr>
+          <td>Sunset:</td>
+          <td><%= @sunset %> </td>
+        </tr>
+        <tr>
+          <td>Sunset Weather Forecast:</td>
+          <td><%= @sunset_weather %></td>
+        </tr>
+        <tr>
+          <td>Chance of Viewing the Sunset</td>
+          <td>#Here goes % chance</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<p>
-  Time of sunset: <%= @sunset %>
-</p>
+      <br/>
+
+
+
+
+      <h3>Forecast</h3>
+
+      <div class="">
+        <%= @forecast_info %>
+      </div>
