Add begining of forecast_cleaner_spec

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,7 +19,7 @@
           <td><%= @sunrise_weather %></td>
         </tr>
         <tr>
-          <td>Chance of Viewing the Sunrise</td>
+          <td>Chance of Viewing the Sunrise:</td>
           <td># 80% #</td>
         </tr>
         <tr>
@@ -31,7 +31,7 @@
           <td><%= @sunset_weather %></td>
         </tr>
         <tr>
-          <td>Chance of Viewing the Sunset</td>
+          <td>Chance of Viewing the Sunset:</td>
           <td># 80% #</td>
         </tr>
       </tbody>
