Add testing for forecast cleaner and service

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 <% if current_user %>
   <nav class="transparent">
     <div class="nav-wrapper">
+      <a href="#" class="sun-logo"></a>
       <ul id="nav-mobile" class="right">
         <li><%= link_to "Most Recent", "#" %></li>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
