--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -12,11 +12,11 @@
         </tr>
         <tr>
           <td>Sunrise:</td>
-          <td><%= @sunrise %></td>
+          <td><%= @cleaner.sunrises[0] %></td>
         </tr>
         <tr>
           <td>Sunrise Weather Forecast:</td>
-          <td><%= @sunrise_weather %></td>
+          <td><%= @cleaner.sunrises_weather[0] %></td>
         </tr>
         <tr>
           <td>Chance of Viewing the Sunrise:</td>
@@ -24,11 +24,11 @@
         </tr>
         <tr>
           <td>Sunset:</td>
-          <td><%= @sunset %> </td>
+          <td><%= @cleaner.sunsets[0] %> </td>
         </tr>
         <tr>
           <td>Sunset Weather Forecast:</td>
-          <td><%= @sunset_weather %></td>
+          <td><%= @cleaner.sunsets_weather[0] %></td>
         </tr>
         <tr>
           <td>Chance of Viewing the Sunset:</td>
