--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   <body class = "landing-image">
 <% elsif current_page?(new_location_path) %>
   <body class = "location-info">
-<% elsif current_page?(location_path) %>
+<% elsif current_page?(dashboard_path) %>
+  <body class = "user-favorites">
+<% else %>
   <body class = "location-show">
 <% end %>
 
@@ -24,7 +26,7 @@
     <div class="nav-wrapper">
       <a href="#" class="sun-logo"></a>
       <ul id="nav-mobile" class="right">
-        <li><%= link_to "Most Recent", "#" %></li>
+        <li><%= link_to "My Favorites", dashboard_path %></li>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
       </ul>
     </div>
