Add refactored methods

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,7 @@
             <td><%= @cleaner.sunrises_weather[index] %></td>
             <td><%= @cleaner.sunsets[index] %></td>
             <td><%= @cleaner.sunsets_weather[index] %></td>
+            <td><%= link_to "More Data", "#" %></td>
         </tr>
         <% end %>
       </tbody>
