--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,7 +55,7 @@
 .show-title {
   color: white;
   font-size: 55px;
-  margin-top: 70px;
+  margin-top: 50px;
 }
 
 .login {
@@ -95,4 +95,39 @@
   margin-bottom: 50px;
   border-radius: 7px;
   font-size: 16px;
+}
+
+#recents-table {
+  background-color: rgba(44, 49, 105, .6);
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 7px;
+  font-size: 16px;
+}
+
+#favorites-table {
+  background-color: rgba(44, 49, 105, .6);
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 7px;
+  font-size: 16px;
+}
+
+.details {
+  color: white;
+  font-size: 55px;
+  margin-top: 70px;
+}
+
+.recent {
+  color: #BCDEE3;
+  margin-bottom: 0px;
+}
+
+.favorite {
+  color: #BCDEE3;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
