--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,79 @@
-<div class="show-title col m6 offset-m1 container center">
-  <h2>Here are your Favorite locations, <%= current_user.nickname %></h2>
+<div class="show-title col m7 container center">
+  <h3><%= current_user.nickname %>'s locations</h3>
 </div>
 
-<h3>Times and Weather for Today's Sunrise and Sunset</h3>
-<div class="row">
-  <div id="dashboard-table" class="col m6 offset-m1">
-    <table>
-      <thead>
-        <tr>
-          <th data-field="id">Location</th>
-          <th data-field="name">Sunrise Time</th>
-          <th data-field="price">Weather</th>
-          <th data-field="name">Sunset Time</th>
-          <th data-field="price">Weather</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @locations.each_with_index do |location, index| %>
-        <tr>
-            <td><%= location.city %></td>
-            <td><%= @cleaner.sunrises[index] %></td>
-            <td><%= @cleaner.sunrises_weather[index] %></td>
-            <td><%= @cleaner.sunsets[index] %></td>
-            <td><%= @cleaner.sunsets_weather[index] %></td>
-            <td><%= link_to "More Data", "#" %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+<div class="details center">
+  <h5>Times and Weather for Today's Sunrise and Sunset</h5>
+</div>
+<div class="recent center">
+  <h5>Most Recent Locations</h5>
+</div>
+<div>
+  <div class="row">
+    <div id="recents-table" class="center col m8">
+      <table>
+        <thead>
+          <tr>
+            <th data-field="id">Location</th>
+            <th data-field="name">Sunrise Time</th>
+            <th data-field="price">Weather</th>
+            <th data-field="name">Sunset Time</th>
+            <th data-field="price">Weather</th>
+            <th><%= link_to "<More Data>", "#" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @locations.each_with_index do |location, index| %>
+          <% if location.favorite == 0 %>
+              <tr>
+                <td><%= location.city %></td>
+                <td><%= @cleaner.sunrises[index] %></td>
+                <td><%= @cleaner.sunrises_weather[index] %></td>
+                <td><%= @cleaner.sunsets[index] %></td>
+                <td><%= @cleaner.sunsets_weather[index] %></td>
+                <td><%= link_to "Add to favorites", location_path(location), method: :patch %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div class="favorite center">
+  <h5>Favorite Locations</h5>
+</div>
+
+<div>
+  <div class="row">
+    <div id="favorites-table"class="center col m8">
+      <table>
+        <thead>
+          <tr>
+            <th data-field="id">Location</th>
+            <th data-field="name">Sunrise Time</th>
+            <th data-field="price">Weather</th>
+            <th data-field="name">Sunset Time</th>
+            <th data-field="price">Weather</th>
+            <th><%= link_to "<More Data>", "#" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @locations.each_with_index do |location, index| %>
+            <% if location.favorite == 1 %>
+              <tr>
+                <td><%= location.city %></td>
+                <td><%= @cleaner.sunrises[index] %></td>
+                <td><%= @cleaner.sunrises_weather[index] %></td>
+                <td><%= @cleaner.sunsets[index] %></td>
+                <td><%= @cleaner.sunsets_weather[index] %></td>
+                <td><%= link_to "Remove from favorites", "#" , method: :patch %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
