Allow a user to un-favorite location

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -63,8 +63,7 @@
 }
 
 #location-form {
-  background-color: rgba(112, 175, 196, .6);
-  font-weight: bold;
+  background-color: rgba(86, 74, 95, .6);
   color: white;
   width: 50%;
   margin-top: 20px;
@@ -78,8 +77,9 @@
 }
 
 .submit-btn {
-  color: black;
-  padding: 5px;
+  color: #C1D3D9;
+  margin-left: 5px;
+  margin-bottom: 8px;
 }
 
 .datepicker {
