--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -25,7 +25,7 @@
         <%= f.label :date, class: "datepicker"  %>
         <%= f.text_field :date, class: "datepicker" %>
       </div>
-      <%= f.submit "Submit", class:"submit-btn blue" %>
+      <%= f.submit "Submit", class:"submit-btn indigo" %>
     <% end %>
   </div>
 </div>
