--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
           <li><%= link_to "My Favorites", dashboard_path %></li>
         <% elsif current_page?(dashboard_path) %>
           <li><%= link_to "Enter Address", new_location_path %></li>
+        <% else %>
+          <li><%= link_to "My Favorites", dashboard_path %></li>
+          <li><%= link_to "Enter Address", new_location_path %></li>
         <% end %>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
       </ul>
