--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,51 @@
 <div class="details center">
   <h5>Times and Weather for Today's Sunrise and Sunset</h5>
 </div>
+
+<div class="favorite center">
+  <h5>Favorite Locations</h5>
+</div>
+
+<div>
+  <div class="row">
+    <div id="favorites-table" class="col m8 offset-m2">
+      <table>
+        <thead>
+          <tr>
+            <th data-field="id">Location</th>
+            <th data-field="name">Sunrise Time</th>
+            <th data-field="price">Weather</th>
+            <th data-field="name">Sunset Time</th>
+            <th data-field="price">Weather</th>
+            <th><%= link_to "<More Data>", "#" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @locations.each_with_index do |location, index| %>
+            <% if location.favorite == 1 %>
+              <tr>
+                <td><%= location.city %></td>
+                <td><%= @cleaner.sunrises[index] %></td>
+                <td><%= @cleaner.sunrises_weather[index] %></td>
+                <td><%= @cleaner.sunsets[index] %></td>
+                <td><%= @cleaner.sunsets_weather[index] %></td>
+                <td><%= link_to "Remove from favorites", location_path(location) , method: :patch %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
 <div class="recent center">
   <h5>Most Recent Locations</h5>
 </div>
+
 <div>
   <div class="row">
-    <div id="recents-table" class="center col m8">
+    <div id="recents-table" class="col m8 offset-m2">
       <table>
         <thead>
           <tr>
@@ -32,43 +71,6 @@
                 <td><%= @cleaner.sunsets[index] %></td>
                 <td><%= @cleaner.sunsets_weather[index] %></td>
                 <td><%= link_to "Add to favorites", location_path(location), method: :patch %></td>
-              </tr>
-            <% end %>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-
-<div class="favorite center">
-  <h5>Favorite Locations</h5>
-</div>
-
-<div>
-  <div class="row">
-    <div id="favorites-table"class="center col m8">
-      <table>
-        <thead>
-          <tr>
-            <th data-field="id">Location</th>
-            <th data-field="name">Sunrise Time</th>
-            <th data-field="price">Weather</th>
-            <th data-field="name">Sunset Time</th>
-            <th data-field="price">Weather</th>
-            <th><%= link_to "<More Data>", "#" %></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @locations.each_with_index do |location, index| %>
-            <% if location.favorite == 1 %>
-              <tr>
-                <td><%= location.city %></td>
-                <td><%= @cleaner.sunrises[index] %></td>
-                <td><%= @cleaner.sunrises_weather[index] %></td>
-                <td><%= @cleaner.sunsets[index] %></td>
-                <td><%= @cleaner.sunsets_weather[index] %></td>
-                <td><%= link_to "Remove from favorites", "#" , method: :patch %></td>
               </tr>
             <% end %>
           <% end %>
