Add validations to Location model
Add validations and tests.
Flash message for incomplete form submission

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,12 @@
   </nav>
 <% end %>
 
+<% flash.each do |type, msg| %>
+  <div class="flashes col m6">
+    <%= content_tag :div, msg %>
+  </div>
+<% end %>
+
 
 <%= yield %>
 
