--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -131,3 +131,13 @@
   margin-bottom: 0px;
   margin-top: 0px;
 }
+
+.flashes {
+  font-size: 24px;
+  background: #D9554E;
+	border-top: 2px solid #FFD324;
+	border-bottom: 2px solid #FFD324;
+	text-align: center;
+	margin: 10px auto;
+	padding: 5px 20px;
+}
