--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,51 +10,22 @@
   <%= csrf_meta_tags %>
 </head>
 
-  <!-- Sets background image differently for the home page -->
-<% if current_page?(root_path) %>
-  <body class = "landing-image">
-<% elsif current_page?(new_location_path) %>
-  <body class = "location-info">
-<% elsif current_page?(dashboard_path) %>
-  <body class = "user-favorites">
-<% else %>
-  <body class = "location-show">
-<% end %>
+  <%= render partial: "partials/backgrounds" %>
 
-<% if current_user %>
-  <nav class="transparent">
-    <div class="nav-wrapper">
-      <a href="#" class="sun-logo"></a>
-      <ul id="nav-mobile" class="right">
-        <% if current_page?(new_location_path) %>
-          <li><%= link_to "My Favorites", dashboard_path %></li>
-        <% elsif current_page?(dashboard_path) %>
-          <li><%= link_to "Enter Address", new_location_path %></li>
-        <% else %>
-          <li><%= link_to "My Favorites", dashboard_path %></li>
-          <li><%= link_to "Enter Address", new_location_path %></li>
-        <% end %>
-        <li><%= link_to "Logout", logout_path, method: :delete %></li>
-      </ul>
+  <%= render partial: "partials/navbar" %>
+
+  <% flash.each do |type, msg| %>
+    <div class="flashes col m6">
+      <%= content_tag :div, msg %>
     </div>
-  </nav>
-<% end %>
+  <% end %>
 
-<% flash.each do |type, msg| %>
-  <div class="flashes col m6">
-    <%= content_tag :div, msg %>
-  </div>
-<% end %>
+  <%= yield %>
 
+  <%= javascript_include_tag 'application' %>
 
-<%= yield %>
-
-
-<%= javascript_include_tag 'application' %>
-
-
-<!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
 </body>
 </html>
