--- a/app/views/partials/_favorite_locations_table.html.erb
+++ b/app/views/partials/_favorite_locations_table.html.erb
@@ -13,17 +13,15 @@
           </tr>
         </thead>
         <tbody>
-          <% @locations.each_with_index do |location, index| %>
-            <% if location.favorite == 1 %>
+          <% @favorites.each_with_index do |favorite, index| %>
               <tr>
-                <td><%= location.city %></td>
-                <td><%= @cleaner.sunrises[index] %></td>
-                <td><%= @cleaner.sunrises_weather[index] %></td>
-                <td><%= @cleaner.sunsets[index] %></td>
-                <td><%= @cleaner.sunsets_weather[index] %></td>
-                <td><%= link_to "Remove from favorites", location_path(location) , method: :patch %></td>
+                <td><%= favorite.city %></td>
+                <td><%= @favorite_cleaned.sunrises[index] %></td>
+                <td><%= @favorite_cleaned.sunrises_weather[index] %></td>
+                <td><%= @favorite_cleaned.sunsets[index] %></td>
+                <td><%= @favorite_cleaned.sunsets_weather[index] %></td>
+                <td><%= link_to "Remove from favorites", location_path(favorite) , method: :patch %></td>
               </tr>
-            <% end %>
           <% end %>
         </tbody>
       </table>
