--- a/app/views/partials/_recent_locations_table.html.erb
+++ b/app/views/partials/_recent_locations_table.html.erb
@@ -13,15 +13,15 @@
           </tr>
         </thead>
         <tbody>
-          <% @locations.first(3).each_with_index do |location, index| %>
-          <% if location.favorite == 0 %>
+          <% @recents.first(3).each_with_index do |recent, index| %>
+          <% if recent.favorite == 0 %>
               <tr>
-                <td><%= location.city %></td>
-                <td><%= @cleaner.sunrises[index] %></td>
-                <td><%= @cleaner.sunrises_weather[index] %></td>
-                <td><%= @cleaner.sunsets[index] %></td>
-                <td><%= @cleaner.sunsets_weather[index] %></td>
-                <td><%= link_to "Add to favorites", location_path(location), method: :patch %></td>
+                <td><%= recent.city %></td>
+                <td><%= @recent_cleaned.sunrises[index] %></td>
+                <td><%= @recent_cleaned.sunrises_weather[index] %></td>
+                <td><%= @recent_cleaned.sunsets[index] %></td>
+                <td><%= @recent_cleaned.sunsets_weather[index] %></td>
+                <td><%= link_to "Add to favorites", location_path(recent), method: :patch %></td>
               </tr>
             <% end %>
           <% end %>
