Data chart for frequently searched locations
Add and style chartkick bar chart
Add new background image for page
Moved logic from view to Location model
Additional tests for Location model
Removed User factory

--- a/app/views/locations/data.html.erb
+++ b/app/views/locations/data.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
 
 <div class="data-title col m6 offset-m1 container center">
-  <h3>Most Frequently Searched Locations</h3>
+  <h3>Sunset Tracker's Most Frequently Searched Locations</h3>
 </div>
 
 
