Add and style sun logo to navbar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -34,6 +34,13 @@
   background-attachment: fixed;
 }
 
+.sun-logo img {
+  height: 35px;
+  width: auto;
+  margin-top: 15px;
+  margin-left: 25px;
+}
+
 .data {
   background: url("/assets/data.jpeg") no-repeat center center fixed;
   -webkit-background-size: cover;
