--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="details center">
-  <h5>Times and Weather for Today's Sunrise and Sunset</h5>
+  <h5>Times and Weather for Favorite Locations</h5>
 </div>
 
 <div class="favorite center">
