--- a/app/views/partials/_recent_locations_table.html.erb
+++ b/app/views/partials/_recent_locations_table.html.erb
@@ -1,26 +1,29 @@
 <div>
   <div class="row">
-    <div id="recents-table" class="col m8 offset-m2">
+    <div id="recents-table" class="col m10 offset-m1">
       <table>
         <thead>
           <tr>
-            <th data-field="id">Location</th>
-            <th data-field="name">Sunrise Time</th>
-            <th data-field="price">Weather</th>
-            <th data-field="name">Sunset Time</th>
-            <th data-field="price">Weather</th>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Sunrise Time</th>
+            <th>Weather</th>
+            <th>Sunset Time</th>
+            <th>Weather</th>
           </tr>
         </thead>
         <tbody>
-          <% @recents.first(3).each_with_index do |recent, index| %>
+          <% @recents.each_with_index do |recent, index| %>
           <% if recent.favorite == 0 %>
               <tr>
+                <td><%= recent.date.strftime("%B %d, %Y") %></td>
                 <td><%= recent.city %></td>
                 <td><%= @recent_cleaned.sunrises[index] %></td>
                 <td><%= @recent_cleaned.sunrises_weather[index] %></td>
                 <td><%= @recent_cleaned.sunsets[index] %></td>
                 <td><%= @recent_cleaned.sunsets_weather[index] %></td>
                 <td><%= link_to "Add to favorites", location_path(recent), method: :patch %></td>
+                <td><%= link_to "Today's Info", today_path(:params => {:location => recent}), method: :post %></td>
               </tr>
             <% end %>
           <% end %>
