--- a/app/views/locations/data.html.erb
+++ b/app/views/locations/data.html.erb
@@ -5,6 +5,6 @@
 </div>
 
 
-<div class="col m8 offset-m2 container">
+<div class="col m8 offset-m2 container location-chart">
   <%= column_chart @locations %>
 </div>
